--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "author": "Malchiel Daniel Rodrigues <daniel@excitollc.com>",
   "license": "GPL-3.0-only",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc && npm run build:sass",
+    "build:sass": "node compile-sass.js"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.25",
     "jest": "^29.7.0",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2"
   },
   "dependencies": {
